# youtube-transcription-cli

./: .gitignore  CLAUDE.md  PRD.md  README.md  build_executable.py  install.sh  install_windows.bat  pyproject.toml  requirements.txt  setup.py  yt-t.spec
yt_t/: audio_utils.py  cli.py  gemini.py  utils.py  video_utils.py  youtube.py
