[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-t"
version = "0.1.0"
description = "A CLI tool to extract transcriptions from YouTube videos"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "youtube-transcript-api>=0.6.0",
    "google-genai>=0.1.0",
    "requests>=2.25.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/youtube-transcription-cli"

[project.scripts]
yt-t = "yt_t.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]